"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

gtk-v2/src/config.c: Fix bug resulting in a crash when opening the
   configuration dialogue if you have an empty gdefaults2 file.
MSW 2006-06-30

Changes for 1.9.1:
------------------------------------------------------------------------------
sound-src/alsa9.c: Fix up sound for alsa9+.  Not positive exact change that
  fixed the problem, but following changes made: Add SOUND_DEBUG_WRITES to
  separate the debug from writes vs all the other debug messags.  If using
  16 bit data, always use unsigned no matter wit the sign config option
  says.  In alsa_recover(), if error is EAGAIN, just do nothing and return.
  In audio_play(), don't write more bytes than chunk size (basically
  largest block that alsa wants at one time).  In play_sound(), don't
  decrease volume based on maximum number of sounds that may be played
  at once - this makes things too quiet.
MSW 2006-06-25

gtk/gx11.c, gtk-v2/src/main.c: Add checks for csocket.fd==-1 after return
   of DoClient.  With change in DoClient to close the socket, the network
   routines are not called again (like they used to be), and thus the
   GUI was't really aware the socket was closed, and wouldn't prompt for
   metaserver selection.
MSW 2006-05-21

Make socket handling more robust.
---
common/client.c: In DoClient() properly close the socket if an invalid packet
   was received.
common/newclient.h: Increase the receive buffer size to 65535 bytes. This
   allows the client to receive any valid packet (even if no currently
   existing server is supposed to send such big packets).
common/newsocket.c: Fix definitions of llevDebug and llevError to make error
   messages visible.
Andreas Kirschbaum 2006-05-21

common/mapdata.c: fix unitialized variable.
Ryo 2006-05-17

This commit adds client side support for the map2 & tick protocol commands.
In additional the the necessary decode logic, more layers are also added